@@ -20,6 +20,8 @@
 
 import sys
 import os
+import psutil
+import pwd
 try:
     ORIGCWD = os.getcwd()
 except OSError:
@@ -57,7 +59,11 @@ if __name__ == '__main__':
     # Workaround for IBus intefering with broadcast when using dead keys
     # Environment also needs IBUS_DISABLE_SNOOPER=1, or double chars appear
     # in the receivers.
-    os.environ['IBUS_DISABLE_SNOOPER']='1'
+    username = pwd.getpwuid(os.getuid()).pw_name
+    ibus_running = [p for p in psutil.process_iter() if p.name == 'ibus-daemon' and p.username == username]
+    ibus_running = len(ibus_running) > 0
+    if ibus_running:
+        os.environ['IBUS_DISABLE_SNOOPER']='1'
 
     dbus_service = None
 
@@ -69,7 +75,6 @@ if __name__ == '__main__':
         # launch gui, return selection
         LAYOUTLAUNCHER=LayoutLauncher()
     else:
-        
         # Attempt to import our dbus server. If one exists already we will just
         # connect to that and ask for a new window. If not, we will create one and
         # continue. Failure to import dbus, or the global config option "dbus"
@@ -112,6 +117,7 @@ if __name__ == '__main__':
         TERMINATOR.set_origcwd(ORIGCWD)
         TERMINATOR.set_dbus_data(dbus_service)
         TERMINATOR.reconfigure()
+        TERMINATOR.ibus_running = ibus_running
 
         try:
             dbg('Creating a terminal with layout: %s' % OPTIONS.layout)
